style.css
body {
    margin: auto 0;
    font-family: Arial, Helvetica, sans-serif;
    width: 100%;
}

.zone {
    color: #FFF;
    font-size: 2em;
    border-radius: 4px;
    border-bottom: 1px solid #bbb;
    border-top: 1px solid #bbb;
    transition: all 0.3s linear;
}

/* ********************NAV BAR******************** */
.sticky {
    position: sticky;
    top: 0;
    width: 100%;
    z-index: 1;
}

.main-nav {
    display: flex;
    list-style: none;
    font-size: .7em;
    margin: 0;
    padding-inline-start: 20px;
    padding-inline-end: 20px;
}

@media only screen and (max-width: 600px) {
    .main-nav {
        font-size: .5em;
        padding: 0;
    }
}

.push {
    margin-left: auto;
}

li {
    padding: 20px;
}

a {
    color: #f5f5f6;
    text-decoration: none;
}

/* ********************COVER******************** */
.container {
    display: flex;
    align-items: center;
    justify-content: center;
    height: 50vh;
    border: 0;
}

.cover {
    height: 100%;
}

/* ********************PROJECTS******************** */
.grid-wrapper {
    display: grid;
    gap: 20px;
    grid-template-columns: repeat(auto-fill, minmax(350px, 1fr));
}

.box>img {
    width: 100%;
}

.box {
    background-color: #444;
    padding: 130px;
    margin: 20px;
    border: 1px solid #bbb;
}

.box:hover {
    cursor: pointer;
    -webkit-box-shadow: rgba(0, 0, 0, 0.8) 0px 5px 15px, inset rgba(0, 0, 0, 0.15) 0px -10px 20px;
    -moz-box-shadow: rgba(0, 0, 0, 0.8) 0px 5px 15px, inset rgba(0, 0, 0, 0.15) 0px -10px 20px;
    -o-box-shadow: rgba(0, 0, 0, 0.8) 0px 5px 15px, inset rgba(0, 0, 0, 0.15) 0px -10px 20px;
    box-shadow: rgba(0, 0, 0, 0.8) 0px 5px 15px, inset rgba(0, 0, 0, 0.15) 0px -10px 20px;
    -webkit-transform: rotate(-1deg);
    -moz-transform: rotate(-1deg);
    -o-transform: rotate(-1deg);
    transform: rotate(-1deg);
}

/* ********************FOOTER******************** */
.footer {
    text-align: center;
    color: #444;
    font-size: 1.3em;
    padding-top: 20px;
    padding-bottom: 10px;
}

/*https://paulund.co.uk/how-to-create-shiny-css-buttons*/
/***********************************************************************
 *  Blue Background
 **********************************************************************/
 .blue {
    background: #7abcff;
    /* Old browsers */
    background: -moz-linear-gradient(top, #7abcff 0%, #60abf8 44%, #4096ee 100%);
    /* FF3.6+ */
    background: -webkit-gradient(linear, left top, left bottom, color-stop(0%, #7abcff), color-stop(44%, #60abf8), color-stop(100%, #4096ee));
    /* Chrome,Safari4+ */
    background: -webkit-linear-gradient(top, #7abcff 0%, #60abf8 44%, #4096ee 100%);
    /* Chrome10+,Safari5.1+ */
    background: -o-linear-gradient(top, #7abcff 0%, #60abf8 44%, #4096ee 100%);
    /* Opera 11.10+ */
    background: -ms-linear-gradient(top, #7abcff 0%, #60abf8 44%, #4096ee 100%);
    /* IE10+ */
    background: linear-gradient(top, #7abcff 0%, #60abf8 44%, #4096ee 100%);
    /* W3C */
}

/***********************************************************************
 *  Green Background
 **********************************************************************/
.green {
    background: #56B870;
    /* Old browsers */
    background: -moz-linear-gradient(top, #56B870 0%, #a5c956 100%);
    /* FF3.6+ */
    background: -webkit-gradient(linear, left top, left bottom, color-stop(0%, #56B870), color-stop(100%, #a5c956));
    /* Chrome,Safari4+ */
    background: -webkit-linear-gradient(top, #56B870 0%, #a5c956 100%);
    /* Chrome10+,Safari5.1+ */
    background: -o-linear-gradient(top, #56B870 0%, #a5c956 100%);
    /* Opera 11.10+ */
    background: -ms-linear-gradient(top, #56B870 0%, #a5c956 100%);
    /* IE10+ */
    background: linear-gradient(top, #56B870 0%, #a5c956 100%);
    /* W3C */
}

/***********************************************************************
 *  Red Background
 **********************************************************************/
.red {
    background: #C655BE;
    /* Old browsers */
    background: -moz-linear-gradient(top, #C655BE 0%, #cf0404 100%);
    /* FF3.6+ */
    background: -webkit-gradient(linear, left top, left bottom, color-stop(0%, #C655BE), color-stop(100%, #cf0404));
    /* Chrome,Safari4+ */
    background: -webkit-linear-gradient(top, #C655BE 0%, #cf0404 100%);
    /* Chrome10+,Safari5.1+ */
    background: -o-linear-gradient(top, #C655BE 0%, #cf0404 100%);
    /* Opera 11.10+ */
    background: -ms-linear-gradient(top, #C655BE 0%, #cf0404 100%);
    /* IE10+ */
    background: linear-gradient(top, #C655BE 0%, #cf0404 100%);
    /* W3C */
}

/***********************************************************************
 *  Yellow Background
 **********************************************************************/
.yellow {
    background: #F3AAAA;
    /* Old browsers */
    background: -moz-linear-gradient(top, #F3AAAA 0%, #febf04 100%);
    /* FF3.6+ */
    background: -webkit-gradient(linear, left top, left bottom, color-stop(0%, #F3AAAA), color-stop(100%, #febf04));
    /* Chrome,Safari4+ */
    background: -webkit-linear-gradient(top, #F3AAAA 0%, #febf04 100%);
    /* Chrome10+,Safari5.1+ */
    background: -o-linear-gradient(top, #F3AAAA 0%, #febf04 100%);
    /* Opera 11.10+ */
    background: -ms-linear-gradient(top, #F3AAAA 0%, #febf04 100%);
    /* IE10+ */
    background: linear-gradient(top, #F3AAAA 0%, #febf04 100%);
    /* W3C */
}

